--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 
 @import "keep-react/css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
